--- a/css/sass/_bootstrap-mobile-navigation.sass
+++ b/css/sass/_bootstrap-mobile-navigation.sass
@@ -47,3 +47,8 @@
     left: auto
     right: 0
     padding: 0 15px 0 0
+    @media screen and (max-width:991px)
+      right: -50%
+.mobile-button-wrap
+  margin-top: -.9rem
+  margin-bottom: 0
