--- a/css/sass/_bootstrap-overrides.sass
+++ b/css/sass/_bootstrap-overrides.sass
@@ -23,9 +23,12 @@ h1,h2,h3,h4,h5,h6
   font-family: 'Libre Baskerville', serif
   margin-bottom: 1em
 
+h5
+  line-height: 1.5em
+
 nav.navbar.navbar-master
   background: $color5
-  height: 3rem
+  min-height: 3rem
   a
     color: $color4
   .navbar-brand
@@ -39,7 +42,7 @@ nav.navbar.navbar-master
   border: 0
   border-radius: 0
   color: #fff
-  background: radial-gradient(ellipse at center, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%), url(../img/person-apple-laptop-notebook.jpg)
+  background: radial-gradient(ellipse at center, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%), url(../img/a-silhouette-at-sunset-wide.jpg)
   background-size: cover
   background-position: center center
   @media screen and (min-width: 1025px)
